--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Kabupaten Sukoharjo</h1>
   <p>Kota Jamu</p>
-  <img src="lambang"alt="Lambang Kabupaten Sukoharjo"</img>
+  <img src="lambang"alt="Lambang Kabupaten Sukoharjo" style="width:200px;"</img>
  <p>Lambang</p>
   	<h2>Informasi Lainnya</h2>
 	<table border="0">
